[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "patchclamp_analysis"
version = "0.1.0"
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.12,<2.0",
    "matplotlib>=3.7,<4.0",
    "pyabf>=2.3,<3.0",
    "pandas>=1.5,<3.0",
]
